--- a/_posts/2020-09-07-Notes-COP.md
+++ b/_posts/2020-09-07-Notes-COP.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Situating Learning in Communities of Practice (Jean Lave)"
+title: "Notes: Situating Learning in Communities of Practice (Jean Lave)"
 author: ravi312
 tags: [notes, CoP, situated-cognition]
 ---
