--- a/_posts/2020-09-07-Notes-COP.md
+++ b/_posts/2020-09-07-Notes-COP.md
@@ -91,9 +91,8 @@ activity (hence differ from teacher/pupil)
 	- oldtimers give testimony about their drinking past and the course of the process of becoming sober
 	- reconstruction of identity, through the process of construction of these life stories
 
-Historical analysis, communities, and Cognition
-~ The process of becoming a full practitioner in a community of practice involves two kinds of production: the production of continuity with, and the displacement of, the practice of oldtimers (Lave & Wenger, 1991) Newcomers and oldtimers are dependent on each other
-~ construction of practitioners' identities is a collective enterprise. Without participation with others, there may be no basis for lived identity
+Historical analysis, communities, and Cognition  
+~ The process of becoming a full practitioner in a community of practice involves two kinds of production: the production of continuity with, and the displacement of, the practice of oldtimers (Lave & Wenger, 1991) Newcomers and oldtimers are dependent on each other; construction of practitioners' identities is a collective enterprise. Without participation with others, there may be no basis for lived identity
 
 ## Why is learning problematic in the modern world?
 
