--- a/_posts/2020-09-07-Notes-COP.md
+++ b/_posts/2020-09-07-Notes-COP.md
@@ -132,3 +132,6 @@ understanding, identity, and knowledgeable skill
 
 
 > "close examination of ongoing social practice as the key is understanding situated learning"
+
+**`Sinha, R.`** `(2020, May, HBCSE).` **Simple flute making and investigation.**
+~ [This](https://metastudio.org/t/simple-flute-making-and-investigation/3752) project is an example of extending the making of a simple straw flute to encourage experimental design. Smartphone was used to measure frequency for quantitative analysis. The project prompted an educator to design his investigation to [study](https://metastudio.org/t/effect-of-thermal-expansion-on-the-pitch-of-steel-bamboo-flute-and-guitar/3762) the effect of thermal expansion on musical instruments. 
