--- a/_posts/2020-09-07-Notes-COP.md
+++ b/_posts/2020-09-07-Notes-COP.md
@@ -145,4 +145,4 @@ understanding, identity, and knowledgeable skill
 
  **Sinha, R.**, Dsouza, J.T., Pardeshi, A.K. `(2019, Dec - 2020, Jan, HBCSE).` **Configurable motor matrix.** Designed the initial prototype of a configurable motor matrix which can be applied in cognitive science experiments. This was a collaborative project between Makerspace and Learning Science Research team at HBCSE. [Link](https://metastudio.org/t/configurable-motor-matrix/2912)
 
- **Sinha, R.** and Dsouza, J.T. `(2019, Dec, HBCSE).` **Designing a Tippe Top.** Counter-intuitive and mesmerizing toy found in traditional wood-work toy shops. Difficult to tweak the design of ready-made toy. Designed 3D model rendering it parameterized, thus affording exploration of investigative questions in playful and accessible manner. [Link](https://metastudio.org/t/designing-a-tippe-top-which-spins-the-longest-duration-after-tipping/2538)
+ **`Sinha, R.`** and Dsouza, J.T. `(2019, Dec, HBCSE).` **Designing a Tippe Top.** Counter-intuitive and mesmerizing toy found in traditional wood-work toy shops. Difficult to tweak the design of ready-made toy. Designed 3D model rendering it parameterized, thus affording exploration of investigative questions in playful and accessible manner. [Link](https://metastudio.org/t/designing-a-tippe-top-which-spins-the-longest-duration-after-tipping/2538)
